[package]
name = "drop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drop"
path = "src/main.rs"


[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
termion = "2.0.3"
thiserror = "1.0.50"

tilog = { git = "https://github.com/ingmarrr/tilog", branch = "main" }
smallvec = { git = "https://github.com/servo/rust-smallvec", branch = "v2" }
